--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+
   *{
     margin:0;
     padding:0;
     box-sizing:border-box;
-    font-family: Arial, sans-serif;
   }
 
   body{
+    font-family:'Poppins', sans-serif;
     overflow:hidden;
+    background:#f4f1ea;
   }
 
   /* PAGE SYSTEM */
@@ -26,13 +29,13 @@
 
   .page.active{
     display:flex;
+    flex-direction:column;
   }
 
   /* ---------- INTRO PAGE ---------- */
   .intro{
     background-size:cover;
     background-position:center;
-    flex-direction:column;
     justify-content:space-between;
     align-items:center;
     color:white;
@@ -50,7 +53,7 @@
     position:relative;
     margin-top:25px;
     font-size:38px;
-    font-weight:bold;
+    font-weight:600;
     z-index:2;
   }
 
@@ -60,7 +63,7 @@
   }
 
   .explore-btn{
-    padding:16px 36px;
+    padding:16px 38px;
     font-size:18px;
     border:none;
     border-radius:40px;
@@ -77,24 +80,66 @@
     opacity:0.85;
   }
 
-  /* ---------- PAGE 2 ---------- */
-  .page2{
+  /* ---------- SERVICES PAGE ---------- */
+  .services{
+    padding:20px;
     background:#f4f1ea;
-    flex-direction:column;
-    align-items:center;
-    padding:30px;
   }
 
   .home-btn{
-    align-self:flex-start;
     font-size:20px;
     cursor:pointer;
-    margin-bottom:20px;
+    margin-bottom:10px;
   }
 
-  .page2 h2{
-    margin-top:40px;
-    font-size:28px;
+  .services h2{
+    text-align:center;
+    margin-bottom:15px;
+    font-size:26px;
+    color:#2c2c2c;
+  }
+
+  .service-grid{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(160px,1fr));
+    gap:15px;
+    margin-top:10px;
+  }
+
+  .service-card{
+    height:180px;
+    border-radius:18px;
+    color:white;
+    position:relative;
+    cursor:pointer;
+    background-size:cover;
+    background-position:center;
+    overflow:hidden;
+  }
+
+  .service-card::before{
+    content:"";
+    position:absolute;
+    inset:0;
+    background:rgba(0,0,0,0.45);
+  }
+
+  .service-content{
+    position:absolute;
+    bottom:12px;
+    left:12px;
+    right:12px;
+    z-index:2;
+  }
+
+  .service-content h3{
+    font-size:16px;
+    margin-bottom:4px;
+  }
+
+  .rating{
+    font-size:14px;
+    color:gold;
   }
 </style>
 </head>
@@ -117,23 +162,66 @@
   <div class="footer">Created by Aman Kumar Mishra</div>
 </section>
 
-<!-- PAGE 2 -->
-<section class="page page2" id="page-2">
+<!-- PAGE 2 : SERVICES -->
+<section class="page services" id="page-services">
   <div class="home-btn" id="homeBtn">🏠 Home</div>
 
-  <h2>Welcome to Galigyan</h2>
-  <p>Select a service to continue (next step)</p>
+  <h2>What do you want to explore?</h2>
+
+  <div class="service-grid">
+
+    <div class="service-card" data-next="next"
+      style="background-image:url('https://images.unsplash.com/photo-1524492412937-b28074a5d7da')">
+      <div class="service-content">
+        <h3>Best Places</h3>
+        <div class="rating">★★★★★</div>
+      </div>
+    </div>
+
+    <div class="service-card"
+      style="background-image:url('https://images.unsplash.com/photo-1566073771259-6a8506099945')">
+      <div class="service-content">
+        <h3>Hotels & Stays</h3>
+        <div class="rating">★★★★☆</div>
+      </div>
+    </div>
+
+    <div class="service-card"
+      style="background-image:url('https://images.unsplash.com/photo-1548013146-72479768bada')">
+      <div class="service-content">
+        <h3>Spiritual Places</h3>
+        <div class="rating">★★★★★</div>
+      </div>
+    </div>
+
+    <div class="service-card"
+      style="background-image:url('https://images.unsplash.com/photo-1555396273-367ea4eb4db5')">
+      <div class="service-content">
+        <h3>Restaurants</h3>
+        <div class="rating">★★★★☆</div>
+      </div>
+    </div>
+
+    <div class="service-card"
+      style="background-image:url('https://images.unsplash.com/photo-1521334884684-d80222895322')">
+      <div class="service-content">
+        <h3>Shopping Areas</h3>
+        <div class="rating">★★★★☆</div>
+      </div>
+    </div>
+
+  </div>
 </section>
 
 <script>
-  /* ---------- CLICK SOUND ---------- */
+  /* CLICK SOUND */
   var clickSound = document.getElementById("clickSound");
   function playClick(){
     clickSound.currentTime = 0;
     clickSound.play();
   }
 
-  /* ---------- PAGE SWITCH ---------- */
+  /* PAGE SWITCH */
   function showPage(id){
     var pages = document.getElementsByClassName("page");
     for(var i=0;i<pages.length;i++){
@@ -142,14 +230,13 @@
     document.getElementById(id).classList.add("active");
   }
 
-  /* ---------- INTRO IMAGE ROTATION ---------- */
+  /* INTRO IMAGE ROTATION */
   var intro = document.getElementById("page-intro");
   var images = [
     "https://images.unsplash.com/photo-1564507592333-c60657eea523",
-    "https://images.unsplash.com/photo-1548013146-72479768bada",
-    "https://images.unsplash.com/photo-1506466010722-395aa2bef877"
+    "https://images.unsplash.com/photo-1506466010722-395aa2bef877",
+    "https://images.unsplash.com/photo-1548013146-72479768bada"
   ];
-
   var i = 0;
   intro.style.backgroundImage = "url(" + images[0] + ")";
 
@@ -159,10 +246,10 @@
     intro.style.backgroundImage = "url(" + images[i] + ")";
   },4000);
 
-  /* ---------- EVENTS ---------- */
+  /* EVENTS */
   document.getElementById("exploreBtn").onclick = function(){
     playClick();
-    showPage("page-2");
+    showPage("page-services");
   };
 
   document.getElementById("homeBtn").onclick = function(){
